# P3LUCHE-Discord-Bot

./: .gitignore  LICENSE  README.md  config.py  database.py  economy_constants.py  economy_db.py  main.py  migration_v4.py  peluche.py  requirements.txt  rumores_test.db-shm  rumores_test.db-wal  utils.py
cogs/: __init__.py  backup.py  casino.py  economia.py  erros.py  jukebox.py  logs.py  lore_ai.py  minigames.py  moderacao.py  musica.py  rumores.py  sistema.py  spotify.py
peluchegpt/: build.py
peluchegpt/backend/: __init__.py  chat_engine.py  classifier.py  config.py  db.py  gemini_llm.py  local_llm.py  lore_indexer.py  main.py  requirements.txt
peluchegpt/frontend/: app.js  index.html  package.json  style.css
peluchegpt/frontend/src-tauri/: Cargo.toml  tauri.conf.json
peluchegpt/frontend/src-tauri/icons/: icon.icns
peluchegpt/frontend/src-tauri/src/: main.rs
