[package]
name = "peluchegpt"
version = "1.0.0"
description = "App desktop do PelucheGPT"
authors = ["P3LUCHE"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
